package FactoryMethod;

public interface IVehiculo {
    //Producto
    String obtenerTipo();
}
